<resources>
    <string name="app_name">Safe Trip</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Nombre">Nombre</string>
    <string name="dato">Pablo</string>
    <string name="email">email</string>
    <string name="correo" />
    <string name="contactos">Contactos de emergencia</string>
    <string name="contacto1">Contacto 1</string>
    <string name="contacto2">Contacto 2</string>
    <string name="contacto3">Contacto 3</string>
    <string name="btn1">Editar</string>
    <string name="btn2">EDITAR</string>
    <string name="btn3">EDITAR</string>
    <string name="btnC">Lista</string>
    <string name="textV">Lista</string>
    <string-array name="menu_list">
        <item>Inicio</item>
        <item>Perfil</item>
        <item>Informacion</item>
    </string-array>
    <string-array name="siniestros_list">
        <item>Asalto con Arma Blanca</item>
        <item>Asalto a Mano Armada</item>
        <item>Daño total o parcial a un vehiculo</item>
        <item>Robo de objetos dentro del Vehiculo</item>
        <item>Robo del Vehiculo</item>
        <item>Secuestro</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_boton_flot">BotonFlot</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="siniestros">Siniestros:</string>
    <string name="editar_fecha">Editar Fecha</string>
    <string name="editar_hora">Editar Hora</string>
    <string name="generar_reporte">Generar Reporte</string>
    <string name="ver_mapa">Ver Mapa</string>
</resources>
