<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.erik.safetrip.PerfilFragment"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:text="@string/Nombre"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dato"
            android:layout_row="0"
            android:layout_column="1" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:layout_row="1"
            android:layout_column="0"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/correo"
            android:layout_row="1"
            android:layout_column="1" />
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contactos"
            android:layout_row="0"
            android:layout_column="0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contacto1"
            android:layout_row="1"
            android:layout_column="0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contacto2"
            android:layout_row="2"
            android:layout_column="0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contacto3"
            android:layout_row="3"
            android:layout_column="0"/>

        <Button
            android:layout_width="76dp"
            android:layout_height="33dp"
            android:text="@string/btn1"
            android:id="@+id/bt"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:layout_width="76dp"
            android:layout_height="33dp"
            android:text="@string/btn2"
            android:layout_row="2"
            android:layout_column="1"/>

        <Button
            android:layout_width="76dp"
            android:layout_height="33dp"
            android:text="@string/btn3"
            android:layout_row="3"
            android:layout_column="1"/>

    </GridLayout>
</LinearLayout>
